--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Ubuntu:700');
 
 
+.title{
+	font-family: 'Ubuntu', sans-serif;
+}
 
 .byline {
 	margin-top: 2px;
@@ -30,7 +34,7 @@
 }
 
 body {
-  background-color: #dfdfdf;
+  background-color: #e8e8e8;
 }
 
 .btn {
@@ -44,4 +48,11 @@ h4 {
 div.col-sm-9 p > a {
 	color: #337ab7;
 	font-weight: bolder;
+}
+
+.well{
+  padding: 20px;
+  -webkit-box-shadow: inset 0px 0px 13px -4px rgba(51,121,182,1), 0px 0px 13px -2px rgba(0,0,0,1);
+  -moz-box-shadow: inset 0px 0px 13px -4px rgba(51,121,182,1), 0px 0px 13px -2px rgba(0,0,0,1);
+  box-shadow: inset 0px 0px 13px -4px rgba(51,121,182,1), 0px 0px 13px -2px rgba(0,0,0,1);
 }
